# face-system

./: .gitignore  Pipfile  database.py  db.sqlite  face-tacker.py  main.py  pyproject.toml
