[tool.poetry]
name = "face-attedance-system"
version = "0.1.0"
description = ""
authors = ["Prashant Baid <prashantbaid80@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
face-recognition = "^1.3.0"
opencv-python = "^4.10.0.82"
setuptools = "^75.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
